# mod_curl_asr

./: README.md
sources/: Makefile.am  curl.c  mod_curl_asr.c  mod_curl_asr.h  utils.c
sources/conf/autoload_configs/: curl_asr.conf.xml
sources/conf/dialplan/: dialplan.xml
